# stylereel

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
docs/: ABLATION.md  GEMMA-EVIDENCE.md  GEMMA-RUNBOOK.md  GEMMA.md  LABLAB-SUBMISSION.md  SLIDES.md  SUBMISSION.md  ablation-table.json  architecture.md  demo.html  index.html  presentation.html
docs/gemma-evidence/: gemma_descriptions.json  gemma_powered_captions.json
examples/: example-01-kitten.txt  example-02-speech-demo.txt  example-03-2min-multiscene.txt
harness/: ablation.py  run.py  score.py
scripts/: chaos.py  obfuscate_key.py  release.sh  smoke.sh
src/stylereel/: audio.py  contract.py  frames.py  fw.py  keybox.py  main.py  pipeline.py  stages.py
src/stylereel/prompts/: describe.txt  judge.txt
src/stylereel/prompts/styles/: formal.txt  humorous_non_tech.txt  humorous_tech.txt  sarcastic.txt
tests/: test_audio.py  test_contract.py  test_frames.py  test_fw.py  test_pipeline.py  test_stages.py
