[project]
name = "stylereel"
version = "0.1.0"
description = "Multi-style video captioning agent — AMD Developer Hackathon ACT II, Track 2"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27",
    "openai>=1.50",
    "opencv-python-headless>=4.10",
    "numpy>=1.26",
    "scenedetect>=0.6.4",
    "faster-whisper>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stylereel"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
